--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
 				<div class="col-md-8">
 					<h1 class="fit-h1 white-text"><strong data-i18n="dgc-fun-currency">The fun and friendly internet currency.</strong></h1>
 					<p data-i18n="dgc-set-apart" class="white-text">Dogecoin sets itself apart from other digital currencies with an amazing, vibrant community made up of friendly folks just like you.</p>
-					<h4 class="fit-h4-1 white-text"><a href="http://www.reddit.com/r/dogecoin" target="_blank"><strong data-i18n="dgc-reddit">Reddit Community</strong></a> | <a href="http://foundation.dogecoin.com" target="_blank"><strong data-i18n="dgc-foundation">Dogecoin Foundation</strong></a></h4>
+					<h4 class="fit-h4-1 white-text"><a href="https://www.reddit.com/r/dogecoin" target="_blank"><strong data-i18n="dgc-reddit">Reddit Community</strong></a></h4>
 				</div>
 				<div class="col-md-4 youtube-alt">
 					<div class="youtube-video">
-						<iframe style="border:none" width="400" height="225" src="//www.youtube.com/embed/000al7ru3ms" allowfullscreen></iframe>
+						<!-- <iframe style="border:none" width="400" height="225" src="//www.youtube.com/embed/000al7ru3ms" allowfullscreen></iframe> -->
+						<iframe style="border:none" width="400" height="225" src="//www.youtube.com/embed/_KVZmS_UO5I" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -153,7 +154,7 @@
 					<h4><a href="/getting-started" class="white-text"><strong data-i18n="dgc-get-started-now">Get Started Now</strong></a></h4>
 					<hr class="hr-white">
 					<p data-i18n="dgc-grow-community" class="white-text">Once you're done, join in on the fun as part of our growing community! <br /> We're a helpful bunch of people and we'll answer any questions that you throw at us!</p>
-					<h4><a href="http://www.reddit.com/r/dogecoin" class="white-text"><strong data-i18n="dgc-reddit">Reddit Community</strong></a></h4>
+					<h4><a href="https://www.reddit.com/r/dogecoin" class="white-text"><strong data-i18n="dgc-reddit">Reddit Community</strong></a></h4>
 				</div>
 			</div>
 		</div>
@@ -211,7 +212,7 @@
 					<li><a data-i18n="dgc-browser-modal-holytransaction" href="https://holytransaction.com/" target="_blank">HolyTransaction</a></li>
 					<li><a data-i18n="dgc-browser-modal-blockio" href="https://www.block.io/" target="_blank">Block.io</a></li>
 				</ul>
-				<h5 data-i18n="dgc-browser-modal-online-disclaimer" class="note"><strong>Note:</strong> These online wallets are not owned or maintained by Dogecoin or the Dogecoin Foundation. While we think the entities behind them are trustworthy - please use at your own risk.</h5>
+				<h5 data-i18n="dgc-browser-modal-online-disclaimer" class="note"><strong>Note:</strong> These online wallets are not owned or maintained by Dogecoin. While we think the entities behind them are trustworthy - please use at your own risk.</h5>
 			</div>
 		</div>
 	</div>
@@ -245,8 +246,9 @@
 				<h4 data-i18n="dgc-community-modal-title" class="modal-title dogefont" id="community-modal-lable">COMMUNITY:</h4>
 				<h5 data-i18n="dgc-community-modal-get-involved">Get involved with Dogecoin! <br/><br/><span data-i18n="dgc-community-modal-participate">Participate in our Reddit community, chat on our IRC (Internet Chat) channel, or have fun on our forums.</span></h5>
 				<ul>
-					<li><a data-i18n="dgc-reddit" href="http://www.reddit.com/r/dogecoin" target="_blank">Reddit Community</a><span data-i18n="dgc-community-modal-reddit-desc"> - The Main Hotspot of the Dogecoin Community.</span></li>
-					<li><a data-i18n="dgc-community-modal-irc" href="http://webchat.freenode.net/?nick=Shibe..&amp;channels=%23dogecoin&amp;prompt=1" target="_blank">#dogecoin IRC</a><span data-i18n="dgc-community-modal-irc-desc"> - Dogecoin-based Internet Chat.</span></li>
+					<li><a data-i18n="dgc-reddit" href="https://www.reddit.com/r/dogecoin" target="_blank">Reddit Community</a><span data-i18n="dgc-community-modal-reddit-desc"> - The Main Hotspot of the Dogecoin Community.</span></li>
+					<li><a data-i18n="dgc-twitter" href="https://twitter.com/Dogecoin" target="_blank">Twitter</a><span data-i18n="dgc-community-modal-twitter-desc"> - The Official Dogecoin Twitter Feed.</span></li>
+					<li><a data-i18n="dgc-community-modal-irc" href="https://webchat.freenode.net/?nick=Shibe..&amp;channels=%23dogecoin&amp;prompt=1" target="_blank">#dogecoin IRC</a><span data-i18n="dgc-community-modal-irc-desc"> - Dogecoin-based Internet Chat.</span></li>
 				</ul>
 				<h5><span data-i18n="dgc-community-modal-friendly">We are friendly, and we will be happy to answer any Dogecoin-related questions. </span><br/><span data-i18n="dgc-community-modal-not-bite">Try us, we promise we won't bite!</span></h5>
 			</div>
@@ -270,7 +272,7 @@
 					<li><a data-i18n="dgc-exchanges-modal-weselldoge" href="https://www.weselldoges.com/" target="_blank">WeSellDoges</a><span data-i18n="dgc-exchanges-modal-weselldoge-desc"> (PayPal)</span></li>
 				</ul>-->
 				<h5><span data-i18n="dgc-exchanges-modal-mining">You can also get Dogecoin by "mining" it. Mining is when you use your computer to process Dogecoin transactions by other people, and in return you get Dogecoin. </span><br/><br/><span data-i18n="dgc-exchanges-modal-mining-howto">Mining is intended for advanced users only, as it requires a lot of technical knowledge to do. If you are interested, <a href="http://dogecointutorial.com/mining.html" target="_blank">read more here</a>.</span></h5>
-				<h5 data-i18n="dgc-exchanges-modal-disclaimer" class="note"><strong>Note:</strong> These online faucets and exchanges are not owned or maintained by Dogecoin or the Dogecoin Foundation. While we are satisfied they are trustworthy, reliable services - please use at your own risk.</h5>
+				<h5 data-i18n="dgc-exchanges-modal-disclaimer" class="note"><strong>Note:</strong> These online faucets and exchanges are not owned or maintained by Dogecoin. While we are satisfied they are trustworthy, reliable services - please use at your own risk.</h5>
 			</div>
 		</div>
 	</div>
@@ -289,7 +291,7 @@
 				</ul>
 				<!-- <h5 data-i18n="dgc-stores-modal-directories">If that isn't enough, you can look at the Dogecoin Business Directories below.</h5>
 				<h5><a data-i18n="dgc-stores-modal-dogedir" href="http://dogedir.com/" target="_blank">Dogedir</a><span data-i18n="dgc-stores-modal-dogedir-desc"> - Dogecoin Business Directory.</span><br><a data-i18n="dgc-stores-modal-dogecoin-link" href="http://dogecoin.link/" target="_blank">Dogecoin.link</a><span data-i18n="dgc-stores-modal-dogecoin-link-desc"> - User-generated Dogecoin Directory.</span></h5>-->
-				<h5 data-i18n="dgc-stores-modal-disclaimer" class="note"><strong>Note:</strong> These online shops and business directories are not owned or maintained by Dogecoin or the Dogecoin Foundation. While we are satisfied they are trustworthy, reliable services - please use at your own risk.</h5>
+				<h5 data-i18n="dgc-stores-modal-disclaimer" class="note"><strong>Note:</strong> These online shops and business directories are not owned or maintained by Dogecoin. While we are satisfied they are trustworthy, reliable services - please use at your own risk.</h5>
 			</div>
 		</div>
 	</div>
@@ -305,21 +307,21 @@
 				<div class="row">
 					<div class="col-md-6">
 						<img src="/imgs/multidoge.png" alt="MultiDoge">
-						<a href="http://multidoge.org/?dl=win">
+						<a href="https://multidoge.org/?dl=win">
 							<h4 data-i18n="dgc-windows-wallet-modal-multidoge">MultiDoge.</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-multidoge-desc">The Dogecoin Light Wallet.</h5>
 					</div>
 					<div class="col-md-6">
 						<img src="/imgs/dogecoin-300.png" width="150" height="150" alt="Dogecoin Core">
-						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.10.0/dogecoin-1.10.0-win32-setup-unsigned.exe">
+						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.14.2/dogecoin-1.14.2-win32-setup-unsigned.exe">
 							<h4 data-i18n="dgc-windows-wallet-modal-dogecoin-core-32bit">Dogecoin Core. (32 bit)</h4>
 						</a>
-						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.10.0/dogecoin-1.10.0-win64-setup-unsigned.exe">
+						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.14.2/dogecoin-1.14.2-win64-setup-unsigned.exe">
 							<h4 data-i18n="dgc-windows-wallet-modal-dogecoin-core-64bit">Dogecoin Core. (64 bit)</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-desc">The Dogecoin "Full" Wallet.</h5>
-						<a href="http://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
+						<a href="https://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
 							<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-guide">Community-maintained user manual</h5>
 						</a>
 					</div>
@@ -370,18 +372,18 @@
 				<div class="row">
 					<div class="col-md-6">
 						<img src="/imgs/multidoge.png" alt="MultiDoge">
-						<a href="http://multidoge.org/?dl=osx">
+						<a href="https://multidoge.org/?dl=osx">
 							<h4 data-i18n="dgc-windows-wallet-modal-multidoge">MultiDoge.</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-multidoge-desc">The Dogecoin Light Wallet.</h5>
 					</div>
 					<div class="col-md-6">
 						<img src="/imgs/dogecoin-300.png" width="150" height="150" alt="Dogecoin Core">
-						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.10.0/dogecoin-1.10.0-osx-signed.dmg">
+						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.14.2/dogecoin-1.14.2-osx.dmg">
 							<h4 data-i18n="dgc-osx-wallet-modal-dogecoin-core">Dogecoin Core.</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-desc">The Dogecoin "Full" Wallet.</h5>
-						<a href="http://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
+						<a href="https://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
 							<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-guide">Community-maintained user manual</h5>
 						</a>
 					</div>
@@ -432,21 +434,21 @@
 				<div class="row">
 					<div class="col-md-6">
 						<img src="/imgs/multidoge.png" alt="MultiDoge">
-						<a href="http://multidoge.org/?dl=lin">
+						<a href="https://multidoge.org/?dl=lin">
 							<h4 data-i18n="dgc-windows-wallet-modal-multidoge">MultiDoge.</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-multidoge-desc">The Dogecoin Light Wallet.</h5>
 					</div>
 					<div class="col-md-6">
 						<img src="/imgs/dogecoin-300.png" width="150" height="150" alt="Dogecoin Core">
-						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.10.0/dogecoin-1.10.0-linux32.tar.gz">
+						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.14.2/dogecoin-1.14.2-i686-pc-linux-gnu.tar.gz">
 							<h4 data-i18n="dgc-windows-wallet-modal-dogecoin-core-32bit">Dogecoin Core. (32 bit)</h4>
 						</a>
-						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.10.0/dogecoin-1.10.0-linux64.tar.gz">
+						<a href="https://github.com/dogecoin/dogecoin/releases/download/v1.14.2/dogecoin-1.14.2-x86_64-linux-gnu.tar.gz">
 							<h4 data-i18n="dgc-windows-wallet-modal-dogecoin-core-64bit">Dogecoin Core. (64 bit)</h4>
 						</a>
 						<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-desc">The Dogecoin "Full" Wallet.</h5>
-						<a href="http://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
+						<a href="https://www.reddit.com/r/dogecoin/wiki/dogecoincoreguide" target="_blank">
 							<h5 data-i18n="dgc-windows-wallet-modal-dogecoin-core-guide">Community-maintained user manual</h5>
 						</a>
 					</div>
@@ -538,7 +540,7 @@
 </script>
 
 <!-- AddThis Smart Layers -->
-<script src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-529f00d46dc73a67" type="text/javascript"></script>
+<script src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=xa-529f00d46dc73a67" type="text/javascript"></script>
 <script type="text/javascript">
 addthis.layers({
       'theme' : 'transparent',
